<resources>
    <string name="app_name">Gora</string>
    <string name="support_symbols">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮЁйцукенгшщзхъфывапролджэячсмитьбюё 0123456789</string>
    <string name="go">Давай!</string>
    <string name="welcome_text">Добро пожаловать. \nДавай начнём планировать \nтвой день!</string>
    <string name="be_creator">Будь творцом своей жизни!</string>
    <string name="my_habit">Мои привычки</string>
    <string name="add_habit_text">У вас пока нет привычек. \nЧтобы добавить привычку, \nнажмите «+»</string>
    <string name="done">сделано</string>
    <string name="skip">пропустить</string>
    <string name="done_cancel">Привычка выполнена!</string>
    <string name="skip_cancel">Привычка пропущена</string>
    <string name="gotit">Понятно</string>
    <string name="delete_swipe_left">Чтобы удалить привычку, свайпните влево \nпо карточке привычки</string>
    <string name="new_habit">Создать новую привычку</string>
    <string name="name_habit">Название</string>
    <string name="icon_choice_text">Выберите иконку привычки</string>
    <string name="day_of_week_choice_text">Повторять по дням недели</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="number_of_symbol">Введите не более 20 символов</string>
    <string name="empty_field">Название должно иметь хотя бы один символ</string>
    <string name="limit_habit">"Исчерпан лимит (10 привычек)"</string>
    <string name="alarm_selection_day">"Выберите хотя бы один день повторения привычки"</string>
    <string name="alarm_selection_icon">"Выберите иконку привычки"</string>
    <string name="calendar">Календарь</string>
    <string name="habits_not_done">Вы выполнили не все привычки</string>
    <string name="habits_done">Все привычки за день выполнены!</string>
    <string name="monday_full_ru">Понедельник</string>
    <string name="friday_full_ru">Пятница</string>
    <string name="tuesday_full_ru">Вторник</string>
    <string name="wednesday_full_ru">Среда</string>
    <string name="thursday_full_ru">Четверг</string>
    <string name="saturday_full_ru">Суббота</string>
    <string name="sunday_full_ru">Воскресенье</string>
    <string name="ok">Окей</string>
    <string name="habit_inactive">Сегодня привычка неактивна</string>
    <string name="habit_limit_10">Более 10 привычек \nдобавить нельзя</string>
    <string name="title_gora">GORA</string>

</resources>
