<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_xml"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_name_habit_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:textColor="@color/sapphire"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/image_girl_runs_png"
        tools:text="Имя привычки" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/checkOrSkip_monday_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/monday_full_ru"
            android:textColor="@color/sapphire"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />

        <TextView
            android:id="@+id/checkOrSkip_friday_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/friday_full_ru"
            android:textColor="@color/sapphire"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/checkOrSkip_tuesday_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/tuesday_full_ru"
            android:textColor="@color/sapphire"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />

        <TextView
            android:id="@+id/checkOrSkip_saturday_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/saturday_full_ru"
            android:textColor="@color/sapphire"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/checkOrSkip_wednesday_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/wednesday_full_ru"
            android:textColor="@color/sapphire"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />

        <TextView
            android:id="@+id/checkOrSkip_sunday_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/sunday_full_ru"
            android:textColor="@color/sapphire"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />
    </LinearLayout>

    <TextView
        android:id="@+id/checkOrSkip_thursday_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/thursday_full_ru"
        android:textColor="@color/sapphire"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/icon_x_blue_fcbk" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ok"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_button_dialog"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/snow_white" />
</LinearLayout>
