<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_foam"
    android:paddingBottom="80dp">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_be_creator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_welcome_man" />

    <TextView
        android:id="@+id/text_view_be_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/be_creator"
        android:textColor="@color/sapphire"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_view_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:lineSpacingExtra="2sp"
        android:text="@string/welcome_text"
        android:textColor="@color/sapphire"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:letterSpacing="0.0"
        android:padding="@dimen/padding_button_default"
        android:stateListAnimator="@null"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/snow_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/roundedImageViewRounded" />
</androidx.constraintlayout.widget.ConstraintLayout>
