<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_foam"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:navigationIcon="@drawable/icon_arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/new_habit"
            android:textColor="@color/sapphire"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/name_habit"
                android:textColor="@color/sapphire"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/number_of_symbol"
                android:imeOptions="actionDone"
                android:textColorHint="@color/periwinkle"
                app:endIconDrawable="@drawable/icon_x_periwinkle"
                app:endIconMode="custom"
                app:endIconTint="@color/periwinkle"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/icon_x_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_skip"
                    android:digits="@string/support_symbols"
                    android:maxLength="20"
                    android:text=""
                    android:textColor="@color/sapphire" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/icon_choice_text"
                android:textColor="@color/sapphire"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_height="wrap_content">

                <GridLayout
                    android:id="@+id/grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="5"
                    android:overScrollMode="always"
                    android:orientation="vertical"
                    android:rowCount="2">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_1"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginBottom="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_water" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_2"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginTop="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_plant" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_3"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginBottom="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_meal" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_4"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginTop="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_sport" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_5"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginBottom="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_pills" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_6"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginTop="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_creative" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_7"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginBottom="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_pet" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_8"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginTop="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_cleaning" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_9"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginBottom="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_walk" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/emoji_10"
                        android:layout_width="@dimen/side_icon_habit"
                        android:layout_height="@dimen/side_icon_habit"
                        android:layout_margin="@dimen/margin_item_grid"
                        android:layout_marginTop="8dp"
                        app:shapeAppearanceOverlay="@style/roundedEmoji"
                        app:srcCompat="@drawable/icon_newhabit_book" />
                </GridLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="10dp"
                android:text="@string/day_of_week_choice_text"
                android:textColor="@color/sapphire"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/background_button_skip"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/monday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday"
                    android:textSize="11sp" />

                <include layout="@layout/stick_bttn_day" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/tuesday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/tuesday"
                    android:textOn="@string/tuesday"
                    android:textSize="11sp" />

                <include layout="@layout/stick_bttn_day" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/wednesday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/wednesday"
                    android:textOn="@string/wednesday"
                    android:textSize="11sp" />

                <include layout="@layout/stick_bttn_day" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/thursday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:backgroundTintMode="screen"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/thursday"
                    android:textOn="@string/thursday"
                    android:textSize="11sp" />

                <include layout="@layout/stick_bttn_day" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/friday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/friday"
                    android:textOn="@string/friday"
                    android:textSize="11sp" />

                <include layout="@layout/stick_bttn_day" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/saturday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/saturday"
                    android:textOn="@string/saturday"
                    android:textSize="11sp" />

                <include layout="@layout/stick_bttn_day" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/sunday_bttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_tint_toggle"
                    android:textColor="@color/sapphire"
                    android:textOff="@string/sunday"
                    android:textOn="@string/sunday"
                    android:textSize="11sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/alarm_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="85dp"
                    android:textColor="@color/pastel_red"
                    android:textSize="14sp"
                    tools:text="Выберите иконку привычки" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="20dp"
                    android:padding="@dimen/dp_14"
                    android:text="@string/add_habit"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@color/periwinkle"
                    app:shapeAppearance="@style/roundedEmoji" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
